# arbiterx

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONVENTIONS.md  LICENSE  README.md  SECURITY.md  arbiterx.toml.example  llms.txt  package.json  pyproject.toml
.agents/: rules.md
.claude-plugin/: manifest.json  marketplace.json  plugin.json
.codex-plugin/: manifest.json  plugin.json
.cursor/rules/: arbiterx.mdc
.github/: PULL_REQUEST_TEMPLATE.md  TOPICS.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
.kiro/steering/: arbiterx.md
.well-known/: agent.json  ai-plugin.json
.windsurf/rules/: arbiterx.md
.zed/assistant/: rules.md
benchmarks/: README.md  run_benchmark.py
benchmarks/results/: benchmark_20260703_150929.txt  self-benchmark.md
docs/: ABOUT.md  CONTRIBUTING.md  GUIDE.md  HOW-IT-WORKS.md  INTEGRATIONS.md
docs/site/: ai.txt  index.html  llms.txt  robots.txt  sitemap.xml
examples/: basic_usage.py  quality_check.py  validate_file.py
hooks/: hooks.json  pre-commit
scripts/: build-map.sh  demo.sh  record-demo.sh
skills/: arbiterx-gate.md  arbiterx-review.md  arbiterx.md  tenet-gate.md  tenet.md
skills/arbiterx/: SKILL.md
skills/arbiterx-gate/: SKILL.md
skills/arbiterx-review/: SKILL.md
src/arbiterx/: __init__.py  cli.py  mcp_server.py  principles.py
src/arbiterx/adapters/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  openrouter.py
src/arbiterx/context/: __init__.py  assembler.py  cache.py  compressor.py
src/arbiterx/gate/: __init__.py  efficiency.py  robustness.py  security.py  validator.py
src/arbiterx/ladder/: __init__.py  interrogator.py
src/arbiterx/mapper/: __init__.py  graph.py  hasher.py  indexer.py  languages.py  parser.py  store.py
src/arbiterx/plugins/: __init__.py  loader.py
src/arbiterx/router/: __init__.py  classifier.py  handoff.py  table.py
tests/integration/: test_indexer.py
tests/unit/: test_adapters.py  test_classifier.py  test_hasher.py  test_parser.py  test_plugins.py  test_store.py
